--- a/server/static/index.html
+++ b/server/static/index.html
@@ -27,7 +27,6 @@
 
 
   <div class="container">    
-
       <div id="showEnroll" style="display:none" class="row col-sm-6" align="center">Tap <a href='/enroll'>here</a> to <br/>enroll in MDM</div>
       <div id="showCert" style="display:none" class="row col-sm-6" align="center">Tap <a href='/ca'>here</a> to install the <br/> CA Cert (for Server/Identity)</div>
 
@@ -35,9 +34,6 @@
         <h1>Open Source Mobile Device Management Server</h1>
         <p class="lead">Choose a command to send to one or more enrolled devices.</p>
       </div>
-
-
-
 
 
       <div class="row">
@@ -49,12 +45,9 @@
             </select>
         </div><!-- /.col-md-4 -->
 
-        <div class="col-md-4 text-center">
-          <br>
-          <select class="form-control" id="devices" name="device" multiple="multiple">
-          </select>
+        <!--Hidden dropdown goes here-->
+        <div class="col-md-4 text-center"></div>
 
-        </div><!-- /.col-md-4 -->
         <div class="col-md-4 text-center">
           <br>
           <input class="btn btn-large btn-primary" id="submit1" type="submit"/>
@@ -63,26 +56,13 @@
 
       <br><br><br>
 
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Command Sent:</h3>
-        </div>
-        <div class="panel-body" id="commandsent"></div>
+      <div class="panel-group" id="accordion">
       </div>
 
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Result:</h3>
-        </div>
-        <div class="panel-body" id="result"></div>
-      </div>
 
-      <div class="panel panel-danger">
-        <div class="panel-heading">
-          <h3 class="panel-title">Error log:</h3>
-        </div>
-        <div class="panel-body" id="error"></div>
-      </div>
+
+
+
 
 
 
@@ -96,6 +76,36 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
     <script src="jquery-1.11.0.min.js"></script>
     <script src="./dist/js/bootstrap.min.js"></script>
+    <!--<script src="./dist/js/mustache.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+    <script id="template" type="x-tmpl-mustache">
+{{#devices}}
+<div class="panel panel-{{status}}" id="{{UDID}}">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <div class="col-md-1"><input type="checkbox" name="box" /></div>
+      <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{UDID}}">
+        <div class="row">
+          <div class="col-md-4">{{name}}</div>
+          <div class="col-md-3">{{owner}}</div>
+          <div class="col-md-3">{{location}}</div>
+
+        </div>
+      </a>
+    </h4>
+  </div>
+  <div class="panel-collapse collapse" id="collapse{{UDID}}">
+    <div class="panel-body">
+      <div class="col-md-1"></div>
+        <div class="col-md-4">UDID:{{UDID}}</div>
+        <div class="col-md-3">IP:{{ip}}</div>
+        <div class="col-md-3"><span class="glyphicon glyphicon-globe"></span> {{geo}}</div>
+      </div>
+    </div>
+  </div>
+</div>
+{{/devices}}
+</script>
 
     <script>
     function update(dev_list, last_cmd, last_result, problems){
@@ -147,6 +157,25 @@
       }
     }
 
+    function populate_devices(){
+      // Populates device accordion using data from server
+      $.post("/devices", function(raw){
+        console.log(raw);
+        var view = jQuery.parseJSON(raw);
+        var template = $('#template').html();
+        console.log(template);
+        //a = document.getElementByID("accordion");
+        var rendered = Mustache.render(template, view);
+
+        //a.html(rendered);        
+        $('#accordion').html(rendered);
+        // maybe clear accordion?
+        console.log(rendered);
+
+
+      });
+    }
+
     function update_cmds(){
       // Populate command list
       $.post("/getcommands", function(cmd_list){
@@ -179,13 +208,16 @@
 
     $(document).ready(function(){
       // Initial setup and start polling
-      poll()
+      //poll()
       update_cmds()
-      setInterval(poll,3000);
+      //setInterval(poll,3000);
+
+      //testing...
+      populate_devices();
 
       // Check for device-specific content and enable if applicable
       if(checkDevice()){
-	document.getElementById("showEnroll").style.display="block";
+        document.getElementById("showEnroll").style.display="block";
         document.getElementById("showCert").style.display="block";
       }
 
@@ -198,24 +230,23 @@
           alert("Please choose one or more devices.");
         }
         else{
-	  // Send AJAX request
+          // Send AJAX request
+          var dev_out = [];
+          devs = document.getElementById("devices").options
+          for(i=0;i<devs.length;i++){
+            temp = [];
+            temp.push(devs[i].text);
+            temp.push(devs[i].value);
+            dev_out.push(temp);
+          }
 
-	  var dev_out = [];
-	  devs = document.getElementById("devices").options
-	  for(i=0;i<devs.length;i++){
-	    temp = [];
-	    temp.push(devs[i].text);
-	    temp.push(devs[i].value);
-	    dev_out.push(temp);
-	  }
+          // Variable to pass all necessary data to server
+          var parameters = {
+            "cmd":$("#commands").val(),
+            "dev[]":dev_out
+          };
 
-	  // Variable to pass all necessary data to server
-	  var parameters = {
-	    "cmd":$("#commands").val(),
-	    "dev[]":dev_out
-	  };
-
-	  // Use stringify to fix odd error with passing just parameters
+          // Use stringify to fix odd error with passing just parameters
           $.post("/queue", JSON.stringify(parameters), function(data){
             data = JSON.parse(data);
             update(data["dev_list"], data["last_cmd"], data["last_result"], data["problems"]);
@@ -224,6 +255,6 @@
       });
     });
     </script>
-    
+
   </body>
 </html>
