Updates device display to look better on tablets and smaller desktop/laptop displays

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -98,12 +98,12 @@
 <div class="panel panel-{{status}}" id="{{UDID}}">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <div class="col-md-1"><input class="row_box" UDUD="{{UDID}}" type="checkbox" name="box" /></div>
+      <div class="col-sm-1"><input class="row_box" UDUD="{{UDID}}" type="checkbox" name="box" /></div>
       <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{UDID}}">
         <div class="row">
-          <div class="col-md-4">{{name}}</div>
-          <div class="col-md-3">{{owner}}</div>
-          <div class="col-md-3">{{location}}</div>
+          <div class="col-sm-4">{{name}}</div>
+          <div class="col-sm-3">{{owner}}</div>
+          <div class="col-sm-3">{{location}}</div>
 
         </div>
       </a>
@@ -111,10 +111,10 @@
   </div>
   <div class="panel-collapse collapse" id="collapse{{UDID}}">
     <div class="panel-body">
-      <div class="col-md-1"></div>
-        <div class="col-md-4">UDID: {{UDID}}</div>
-        <div class="col-md-3">IP: {{ip}}</div>
-        <div class="col-md-3"><span class="glyphicon glyphicon-globe"></span> {{geo}}</div>
+      <div class="col-sm-1"></div>
+        <div class="col-sm-4">UDID: {{UDID}}</div>
+        <div class="col-sm-3">IP: {{ip}}</div>
+        <div class="col-sm-3"><span class="glyphicon glyphicon-globe"></span> {{geo}}</div>
       </div>
 
 <table class="table table-condensed">
