Switches from CDN to local copy of mustache.min.js to improve load times

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -91,8 +91,8 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
     <script src="jquery-1.11.0.min.js"></script>
     <script src="./dist/js/bootstrap.min.js"></script>
-    <!--<script src="./dist/js/mustache.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+    <script src="./dist/js/mustache.min.js"></script>
+    <!-- Ideally move mustache template to another file -->
     <script id="template" type="x-tmpl-mustache">
 {{#devices}}
 <div class="panel panel-{{status}}" id="{{UDID}}">
